fixed footer link span on mobile

--- a/src/pages/components/Footer.module.css
+++ b/src/pages/components/Footer.module.css
@@ -55,4 +55,9 @@
     top: 2rem;
     left: 1rem;
   }
+
+  .content {
+    height: 2rem;
+  }
+
 }
